# gr-latency_manager

./: CMakeLists.txt  MANIFEST.md
apps/: CMakeLists.txt
cmake/Modules/: exampleConfig.cmake
docs/: CMakeLists.txt  README.example  README.latency_manager
docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
examples/: audio_latency.grc  audio_latency_fixed.grc  latency_demo.grc  testing.grc  testing.py
gr-analog/: CMakeLists.txt  patch.diff
gr-analog/.conda/: README.md
gr-analog/apps/: CMakeLists.txt
gr-analog/docs/: CMakeLists.txt
gr-analog/examples/: testing.grc
gr-analog/grc/: CMakeLists.txt  analog_basis_change.block.yml
gr-analog/lib/: CMakeLists.txt  basis_change_impl.cc  basis_change_impl.h
gr-latency_manager/: MANIFEST.md
gr-latency_manager/.conda/: README.md
gr-latency_manager/docs/: CMakeLists.txt
gr-latency_manager/examples/: audio_latency_fixed.grc  latency_demo.grc
gr-latency_manager/grc/: CMakeLists.txt  latency_manager_latency_manager.block.yml  latency_manager_tag_to_msg.block.yml
grc/: CMakeLists.txt  example_basis_change.block.yml  example_latency_manager.block.yml  example_tag_to_msg.block.yml  latency_manager_latency_manager.block.yml  latency_manager_tag_to_msg.block.yml
lib/: CMakeLists.txt  basis_change_impl.cc  basis_change_impl.h  latency_manager_impl.cc  latency_manager_impl.h  tag_to_msg_impl.cc  tag_to_msg_impl.h
python/: CMakeLists.txt  __init__.py  qa_latency_manager.py
python/latency_manager/bindings/: CMakeLists.txt  python_bindings.cc
python/latency_manager/bindings/docstrings/: latency_manager_pydoc_template.h
swig/: CMakeLists.txt  example_swig.i
(+44 files in other folders)
